[package]
name = "candle-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle-core-types = { workspace = true }
candle-cpu-backend = { workspace = true }
candle-cuda = { workspace = true, optional = true }
candle-kernels = { workspace = true, optional = true }
candle-metal = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
libm = { workspace = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { workspace = true, features = ["fancy-regex"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
candle-ug = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
# CPU-only build is the default. Omitting all GPU features produces a clean
# CPU-only binary with zero GPU code compiled in.
default = []

# NVIDIA GPU backend via cuBLAS. Requires the CUDA toolkit (≥ 11).
# Use: cargo build --features cuda
cuda = ["dep:candle-cuda", "cudarc", "dep:candle-kernels", "candle-ug?/cuda"]

# Enables cuda + cuDNN accelerated convolution and normalization.
# Requires CUDA toolkit + cuDNN runtime.
cudnn = ["cuda", "cudarc/cudnn", "candle-cuda?/cudnn"]

# Multi-GPU communication via NVIDIA NCCL. Requires CUDA + NCCL runtime.
nccl = ["cuda", "cudarc/nccl"]

# Intel MKL BLAS for CPU (Linux/Windows). Faster matmul on Intel hardware.
mkl = ["dep:libc", "dep:intel-mkl-src", "candle-cpu-backend/mkl"]

# Apple Accelerate BLAS for CPU (macOS only). Faster matmul on Apple hardware.
accelerate = ["dep:libc", "dep:accelerate-src", "candle-cpu-backend/accelerate"]

# Apple Metal GPU backend (macOS 13+, Apple Silicon or AMD GPU on Intel Mac).
# Use: cargo build --features metal
metal = [
    "dep:candle-metal",
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "dep:candle-metal-kernels",
    "candle-ug?/metal",
]

# candle-ug (μGPU) experimental backend.
ug = ["dep:candle-ug", "candle-core-types/ug"]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]

[[example]]
name = "cuda_basics"
required-features = ["cuda"]
