[package]
    categories.workspace = true
    description          = "CUDA backend for the candle ML framework"
    edition.workspace    = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "candle-cuda"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    candle-core-types = { workspace = true }
    candle-kernels    = { workspace = true }
    cudarc            = { workspace = true }
    float8            = { workspace = true }
    half              = { workspace = true }
    num-traits        = { workspace = true }
    smallvec          = { workspace = true }
    thiserror         = { workspace = true }

[features]
    cudnn   = ["cudarc/cudnn"]
    default = []
    nccl    = ["cudarc/nccl"]
    ug      = ["dep:candle-ug"]

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
    candle-ug = { workspace = true, optional = true }
