[package]
    categories.workspace = true
    description          = "AMD AOCL-BLAS-backed CPU executor for the fuel lazy-graph layer."
    edition.workspace    = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "fuel-aocl-cpu-backend"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    aocl-blas              = { workspace = true }
    aocl-types             = { workspace = true }
    fuel-conv              = { workspace = true }
    fuel-core-types        = { workspace = true }
    fuel-graph             = { workspace = true }
    fuel-graph-cpu         = { workspace = true }
    fuel-graph-executor    = { workspace = true }
    fuel-reference-backend = { workspace = true }

[dev-dependencies]
    # Phase 7.5 G2: tests need a CpuBackendDevice handle for
    # slot-populating constructors (cpu_dev() helper).
    fuel-cpu-backend = { workspace = true }
