[package]
name = "fuel-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
fuel-aocl-cpu-backend = { workspace = true, optional = true }
fuel-mkl-cpu-backend = { workspace = true, optional = true }
fuel-core-types = { workspace = true, features = ["serde"] }
fuel-cpu-backend = { workspace = true }
fuel-graph = { workspace = true }
fuel-graph-cpu = { workspace = true }
fuel-graph-executor = { workspace = true }
fuel-graph-router = { workspace = true }
fuel-reference-backend = { workspace = true }
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fuel-cuda-kernels = { workspace = true, optional = true }
fuel-graph-cuda = { workspace = true, optional = true }
fuel-graph-vulkan = { workspace = true, optional = true }
fuel-metal = { workspace = true, optional = true }
fuel-metal-kernels = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
# baracuda CUDA FFI — fuel-core needs the traits + driver + cudnn + nccl
# optionally; the sub-crates are pulled individually so the feature graph
# stays explicit.
baracuda-types  = { workspace = true, optional = true }
baracuda-core   = { workspace = true, optional = true }
baracuda-driver = { workspace = true, optional = true }
baracuda-cudnn  = { workspace = true, optional = true }
baracuda-nccl   = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
libm = { workspace = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { workspace = true, features = ["fancy-regex"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
fuel-ug = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
# CPU-only build is the default. Omitting all GPU features produces a clean
# CPU-only binary with zero GPU code compiled in.
default = []

# NVIDIA GPU backend via baracuda (cuBLAS + driver). Dynamic-loaded at
# runtime; cargo build does not require the CUDA toolkit installed.
# Use: cargo build --features cuda
cuda = [
    "dep:fuel-cuda-kernels",
    "dep:fuel-graph-cuda",
    "dep:baracuda-types",
    "dep:baracuda-core",
    "dep:baracuda-driver",
    "fuel-ug?/cuda",
]

# Enables cuda + cuDNN accelerated convolution and normalization.
cudnn = ["cuda", "dep:baracuda-cudnn", "fuel-graph-cuda?/cudnn"]

# Enables CUDA FlashAttention v2 (sm80) via fuel-flash-attn-cuda-sys.
# Implies `cuda`. Adds a substantial nvcc build (~30 min for 37 .cu
# kernels + CUTLASS headers); only opt in if you actually need it.
flash-attn = ["cuda", "fuel-graph-cuda?/flash-attn"]

# Enables CUDA FlashAttention v3 (sm90 / Hopper) via
# fuel-flash-attn-v3-cuda-sys. Implies `cuda`. Even larger nvcc build
# than v2 (67 kernels). When both `flash-attn` and `flash-attn-v3`
# are enabled, dispatch tries v3 first and falls back to v2 on Err
# (e.g. softcap requested or unsupported head_dim).
flash-attn-v3 = ["cuda", "fuel-graph-cuda?/flash-attn-v3"]

# Multi-GPU communication via NVIDIA NCCL.
nccl = ["cuda", "dep:baracuda-nccl", "fuel-graph-cuda?/nccl"]

# Intel MKL BLAS for CPU (Linux/Windows). Faster matmul on Intel hardware.
mkl = ["dep:libc", "dep:intel-mkl-src", "fuel-cpu-backend/mkl"]

# AMD AOCL-BLAS (BLIS) for CPU. Faster matmul on Zen-class AMD CPUs.
# Phase 7b spike: links via the out-of-tree `aocl-blas` crate; runs the
# 2×2 sgemm probe at startup and bails gracefully if libaocl_blas is
# missing. Pulls fuel-graph-router/aocl so LazyTensor::realize_f32 can
# route through AOCL when the dispatch table picks it.
aocl = ["dep:fuel-aocl-cpu-backend", "fuel-graph-router/aocl"]

# Intel oneMKL CPU backend for the lazy-graph layer (Phase 7b). Distinct
# from the legacy `mkl` feature above (which feeds the eager fuel-cpu-
# backend's intel-mkl-src linkage). `onemkl` is the lazy-graph path,
# loading mkl_rt at runtime via the `onemkl` crate. Both can coexist;
# Phase 6b's judge picks empirically.
onemkl = ["dep:fuel-mkl-cpu-backend", "fuel-graph-router/onemkl"]

# Apple Accelerate BLAS for CPU (macOS only). Faster matmul on Apple hardware.
accelerate = ["dep:libc", "dep:accelerate-src", "fuel-cpu-backend/accelerate"]

# Apple Metal GPU backend (macOS 13+, Apple Silicon or AMD GPU on Intel Mac).
# Use: cargo build --features metal
metal = [
    "dep:fuel-metal",
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "dep:fuel-metal-kernels",
    "fuel-ug?/metal",
]

# Cross-vendor GPU backend via Vulkan (vulkane + precompiled SPIR-V).
# Use: cargo build --features vulkan. No toolchain required at build
# time — shaders are precompiled and committed.
vulkan = ["dep:fuel-graph-vulkan"]

# fuel-ug (μGPU) experimental backend.
# When combined with `cuda`, fuel-graph-cuda's `compile()` method that turns
# an SSA kernel into a CudaFunc is itself gated on `ug` — pipe the feature
# through so `UgIOp1::new(..., device)` can build the kernel.
ug = ["dep:fuel-ug", "fuel-core-types/ug", "fuel-graph-cuda?/ug"]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]

[[example]]
name = "cuda_basics"
required-features = ["cuda"]
