[package]
name = "fuel-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
fuel-aocl-cpu-backend = { workspace = true, optional = true }
fuel-mkl-cpu-backend = { workspace = true, optional = true }
fuel-ir = { workspace = true, features = ["serde"] }
fuel-backend-contract = { workspace = true }
fuel-correctness-fixtures = { workspace = true, features = ["serde", "capture"] }
fuel-cpu-backend = { workspace = true }
fuel-hardware = { workspace = true }
fuel-dispatch = { workspace = true }
fuel-memory = { workspace = true }
bytemuck = { workspace = true }
fuel-formats = { workspace = true }
fuel-quantized = { workspace = true }
fuel-graph = { workspace = true }
fuel-reference-backend = { workspace = true }
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fuel-cuda-backend = { workspace = true, optional = true }
fuel-vulkan-backend = { workspace = true, optional = true }
fuel-metal-backend = { workspace = true, optional = true }
fuel-metal-kernels = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
# baracuda CUDA FFI — fuel-core needs the traits + driver + cudnn + nccl
# optionally; the sub-crates are pulled individually so the feature graph
# stays explicit.
baracuda-types  = { workspace = true, optional = true }
baracuda-core   = { workspace = true, optional = true }
baracuda-driver = { workspace = true, optional = true }
baracuda-cudnn  = { workspace = true, optional = true }
baracuda-nccl   = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
image = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
libm = { workspace = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { workspace = true, features = ["fancy-regex"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
fuel-ug = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
# CPU-only build is the default. Omitting all GPU features produces a clean
# CPU-only binary with zero GPU code compiled in.
default = []

# NVIDIA GPU backend via baracuda (cuBLAS + driver). Dynamic-loaded at
# runtime; cargo build does not require the CUDA toolkit installed.
# Use: cargo build --features cuda
cuda = [
    "dep:fuel-cuda-backend",
    "dep:baracuda-types",
    "dep:baracuda-core",
    "dep:baracuda-driver",
    "fuel-dispatch/cuda",
    "fuel-memory/cuda",
    "fuel-hardware/cuda",
    "fuel-ug?/cuda",
]

# Enables cuda + cuDNN accelerated convolution and normalization.
cudnn = ["cuda", "dep:baracuda-cudnn", "fuel-cuda-backend?/cudnn"]

# Multi-GPU communication via NVIDIA NCCL.
nccl = ["cuda", "dep:baracuda-nccl", "fuel-cuda-backend?/nccl"]

# Intel MKL BLAS for CPU (Linux/Windows). Faster matmul on Intel hardware.
mkl = ["dep:libc", "dep:intel-mkl-src", "fuel-cpu-backend/mkl"]

# AMD AOCL-BLAS (BLIS) for CPU. Faster matmul on Zen-class AMD CPUs.
# Links via the out-of-tree `aocl-blas` crate; runs the 2×2 sgemm probe
# at startup and bails gracefully if libaocl_blas is missing. AOCL
# kernels register as `kernel_source` siblings of BackendId::Cpu on the
# binding table; the picker selects them empirically (the legacy
# fuel-graph-router/aocl routing edge was retired with the
# `judge::cached()` Router branch, executor-unification Session 3).
aocl = ["dep:fuel-aocl-cpu-backend"]

# Intel oneMKL CPU backend for the lazy-graph layer (Phase 7b). Distinct
# from the legacy `mkl` feature above (which feeds the eager fuel-cpu-
# backend's intel-mkl-src linkage). `onemkl` is the lazy-graph path,
# loading mkl_rt at runtime via the `onemkl` crate. Both can coexist;
# the Judge-fed picker chooses empirically per binding-table cell.
onemkl = ["dep:fuel-mkl-cpu-backend"]

# Apple Accelerate BLAS for CPU (macOS only). Faster matmul on Apple hardware.
accelerate = ["dep:libc", "dep:accelerate-src", "fuel-cpu-backend/accelerate"]

# Apple Metal GPU backend (macOS 13+, Apple Silicon or AMD GPU on Intel Mac).
# Use: cargo build --features metal
metal = [
    "dep:fuel-metal-backend",
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "dep:fuel-metal-kernels",
    "fuel-dispatch/metal",
    "fuel-memory/metal",
    "fuel-ug?/metal",
]

# Cross-vendor GPU backend via Vulkan (vulkane + precompiled SPIR-V).
# Use: cargo build --features vulkan. No toolchain required at build
# time — shaders are precompiled and committed.
vulkan = ["dep:fuel-vulkan-backend", "fuel-dispatch/vulkan", "fuel-memory/vulkan", "fuel-hardware/vulkan"]

# fuel-ug (μGPU) experimental backend.
# Pipes the `ug` feature through to fuel-cuda-backend and fuel-metal-backend so the
# per-backend `XxxUgIOp1::new(..., device)` constructors are available
# whenever `cuda`/`metal` is also enabled.
ug = ["dep:fuel-ug", "fuel-ir/ug", "fuel-cuda-backend?/ug", "fuel-metal-backend?/ug"]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]

[[example]]
name = "cuda_basics"
required-features = ["cuda"]
