[package]
    categories.workspace = true
    description          = "CPU backend computation kernels for the fuel ML framework"
    edition.workspace    = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "fuel-cpu-backend"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    fuel-core-types = { workspace = true }
    fuel-quantized  = { workspace = true }
    bytemuck          = { workspace = true }
    float8            = { workspace = true }
    gemm              = { workspace = true }
    half              = { workspace = true }
    libc              = { workspace = true, optional = true }
    memmap2           = { workspace = true }
    num-traits        = { workspace = true }
    num_cpus          = { workspace = true }
    rand              = { workspace = true }
    rand_distr        = { workspace = true }
    rayon             = { workspace = true }

    accelerate-src = { workspace = true, optional = true }
    intel-mkl-src  = { workspace = true, optional = true }

[dev-dependencies]
    tempfile = { workspace = true }

[features]
    accelerate = ["dep:accelerate-src", "dep:libc"]
    default    = []
    mkl        = ["dep:intel-mkl-src", "dep:libc"]
