[package]
    categories  = ["science"]
    description = "CUBLASLt fused GEMM with activation/bias for the Fuel ML framework."
    edition     = "2024"
    homepage    = "https://github.com/huggingface/fuel"
    keywords    = ["blas", "machine-learning", "tensor"]
    license     = "MIT OR Apache-2.0"
    name        = "fuel-cublaslt"
    repository  = "https://github.com/huggingface/fuel"
    version     = "0.10.2"

[dependencies]
    fuel                = { workspace = true, features = ["cuda"] }
    fuel-graph-cuda     = { workspace = true }
    baracuda-types      = { workspace = true }
    baracuda-driver     = { workspace = true }
    baracuda-cublas     = { workspace = true }
    baracuda-cublas-sys = { workspace = true }
    half                = { workspace = true }
