[package]
    categories.workspace = true
    description          = "CUDA GPU backend for the fuel ML framework: dtype-tagged storage, kernel dispatch (matmul/conv/softmax/rope/rms_norm/quantized), and lazy-graph executor integration. Built on the baracuda-* FFI crate family — parallel structure to fuel-graph-vulkan on vulkane."
    edition.workspace    = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "fuel-cuda-backend"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    fuel-core-types        = { workspace = true }
    fuel-graph             = { workspace = true }
    fuel-graph-executor    = { workspace = true }
    fuel-cuda-kernels      = { workspace = true }
    fuel-cpu-backend       = { workspace = true }
    fuel-quantized         = { workspace = true }
    fuel-reference-backend = { workspace = true }
    # baracuda CUDA FFI: split into sub-crates for a precise feature graph.
    baracuda-types      = { workspace = true }
    baracuda-core       = { workspace = true }
    baracuda-driver     = { workspace = true }
    baracuda-cuda-sys   = { workspace = true }
    baracuda-cublas     = { workspace = true }
    baracuda-cublas-sys = { workspace = true }
    baracuda-curand     = { workspace = true }
    baracuda-nvrtc      = { workspace = true }
    baracuda-cudnn      = { workspace = true, optional = true }
    baracuda-cudnn-sys  = { workspace = true, optional = true }
    baracuda-nccl       = { workspace = true, optional = true }
    # FlashAttention v2 sm80 kernels — optional, behind the `flash-attn`
    # feature. The -sys crate has no fuel deps so this dep is one-way
    # (no cycle with the eager-wrapper crate).
    fuel-flash-attn-cuda-sys = { workspace = true, optional = true }
    # FlashAttention v3 sm90 (Hopper) kernels — same shape, behind the
    # `flash-attn-v3` feature. Co-exists with the v2 -sys at link time
    # (the v3 C symbol is `run_mha_v3`).
    fuel-flash-attn-v3-cuda-sys = { workspace = true, optional = true }
    # Numeric + tracing
    float8     = { workspace = true }
    half       = { workspace = true }
    num-traits = { workspace = true }
    smallvec   = { workspace = true }
    thiserror  = { workspace = true }
    tracing    = { workspace = true }

[features]
    cudnn   = ["dep:baracuda-cudnn", "dep:baracuda-cudnn-sys"]
    default = []
    nccl    = ["dep:baracuda-nccl"]
    ug      = ["dep:fuel-ug"]
    flash-attn = ["dep:fuel-flash-attn-cuda-sys"]
    flash-attn-v3 = ["dep:fuel-flash-attn-v3-cuda-sys"]

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
    fuel-ug = { workspace = true, optional = true }
