[package]
name = "fuel-cuda-vmm"
version = "0.10.3"
edition = "2024"
description = "CUDA Virtual Memory Management bindings for elastic KV cache allocation in Fuel."
homepage = "https://github.com/ciresnave/fuel"
repository = "https://github.com/ciresnave/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
fuel              = { workspace = true, features = ["cuda"] }
baracuda-cuda-sys = { workspace = true }
baracuda-driver   = { workspace = true }
thiserror         = { workspace = true }