[package]
    categories.workspace = true
    description          = "CUDA backend for the fuel ML framework"
    edition.workspace    = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "fuel-cuda"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    fuel-core-types = { workspace = true }
    fuel-cuda-kernels = { workspace = true }
    cudarc            = { workspace = true }
    float8            = { workspace = true }
    half              = { workspace = true }
    num-traits        = { workspace = true }
    smallvec          = { workspace = true }
    thiserror         = { workspace = true }

[features]
    cudnn   = ["cudarc/cudnn"]
    default = []
    nccl    = ["cudarc/nccl"]
    ug      = ["dep:fuel-ug"]

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
    fuel-ug = { workspace = true, optional = true }
